--- a/tp16/pom.xml
+++ b/tp16/pom.xml
@@ -31,6 +31,7 @@
         <module>tp16.2</module>
         <module>tp16.3</module>
         <module>tp16.4</module>
+        <module>tp16.5</module>
     </modules>
 
 </project>
