--- a/tp16/pom.xml
+++ b/tp16/pom.xml
@@ -32,6 +32,7 @@
         <module>tp16.3</module>
         <module>tp16.4</module>
         <module>tp16.5</module>
+        <module>tp16.6</module>
     </modules>
 
 </project>
