--- a/tp16/pom.xml
+++ b/tp16/pom.xml
@@ -33,6 +33,7 @@
         <module>tp16.4</module>
         <module>tp16.5</module>
         <module>tp16.6</module>
+        <module>tp16.7</module>
     </modules>
 
 </project>
