--- a/tp16/tp16.7/pom.xml
+++ b/tp16/tp16.7/pom.xml
@@ -38,6 +38,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+            <version>2.5.6</version>
         </dependency>
     </dependencies>
 
